# BUSINESS-DATA-API

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.automation  Dockerfile.spark  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  run.py  run_api.py  run_automation.py  run_spark.py  run_worker.py  wsgi.py
automation_scripts/: check_for_krs_updates.py
business_data_api/api/: __init__.py
business_data_api/api/models/: __init__.py  response_models.py
business_data_api/api/routes/: krs_api.py  krs_dokumenty_finansowe.py  root.py
business_data_api/db/: __init__.py  models.py
business_data_api/scraping/krs_api/: model.py
business_data_api/scraping/krs_dokumenty_finansowe/: model.py
business_data_api/tasks/: exceptions.py
business_data_api/tasks/krs_api/: get_krs_api.py
business_data_api/tasks/krs_dokumenty_finansowe/: get_krs_df.py
business_data_api/utils/: dict_response_template.py  logger.py
business_data_api/utils/flask_utils/: json_response_template.py
business_data_api/utils/logger/: __init__.py  logging_postgresql_handler.py
business_data_api/utils/redis_utils/: redis_job_status.py
business_data_api/utils/response_templates/: default_response.py
business_data_api/workers/: krsapi_worker.py  krsdf_worker.py  worker.py  workers.py
business_data_api/workers/tasks/: status.py  task_scrape_krsdf_document_list.py  (+1 more)
logging_utils/: __init__.py  logging_postgresql_handler.py
spark_etl/: spark_stream_krs_api.py
spark_etl/functions/: write_to_psq_batch.py
spark_etl/schemas/: debezium_envelope_schema.py
tests/: conftest.py
(+10 files in other folders)
