[project]
name = "business-data-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pomeran",email = "lejk99@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "rq (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.scripts]
start = "run:main"

